# vwap-reversion-engine

./: .gitignore  README.md  generate_daily_report.py  main.py  pyproject.toml  requirements.txt  run_backtest.py  run_scanner_backtest.py  run_sweep.py  run_time_analysis.py
backtest/: __init__.py  engine.py  report.py  scanner_engine.py
config/: __init__.py  settings.py
scanner/: __init__.py  premarket.py  universe.py
src/: __init__.py  bot.py  data.py  execution.py  indicators.py
tests/: __init__.py  test_core.py
utils/: __init__.py  exceptions.py  journal.py  logger.py  validation.py
